==> xero0001/SnailVR/lib/ICM20948/Arduino-ICM20948.cpp <==
#include <Arduino.h>
#include <SPI.h>
#include <Wire.h>
#include "Arduino-ICM20948.h"
#define AK0991x_DEFAULT_I2C_ADDR 0x0C
#define AK0991x_SECONDARY_I2C_ADDR 0x0E /* The secondary I2C address for AK0991x Magnetometers */
#define ICM_I2C_ADDR_REVA 0x68 /* I2C slave address for INV device on Rev A board */
#define ICM_I2C_ADDR_REVB 0x69 /* I2C slave address for INV device on Rev B board */
#define AD0_VAL 1 // The value of the last bit of the I2C address.
#define THREE_AXES 3
#include "icm20948_img.dmp3a.h"

int ArduinoICM20948::i2c_master_write_register(uint8_t address, uint8_t reg, uint32_t len, const uint8_t *data)
{
  if (!(address == 0x69 || address == 0x68))
  {

    Serial.print("Odd address:");
    Serial.println(address);
  }
  Wire.beginTransmission(address);
  Wire.write(reg);
  Wire.write(data, len);
  Wire.endTransmission();
  return 0;
}

int ArduinoICM20948::i2c_master_read_register(uint8_t address, uint8_t reg, uint32_t len, uint8_t *buff)
{
  if (!(address == 0x69 || address == 0x68))
  {

    Serial.print("Odd read address:");
    Serial.println(address);
  }
  // Serial.print("read address ");
  // Serial.println(address);
  // Serial.print("register ");
  // Serial.println(reg);
  // Serial.print("length = ");
  // Serial.println(len);

  Wire.beginTransmission(address);
  Wire.write(reg);
  Wire.endTransmission(false); // Send repeated start

  // uint32_t offset = 0;
  uint32_t num_received = Wire.requestFrom(address, len);
  // Serial.print("received = ");
  // Serial.println(num_received);
  // Serial.println(buff[0]);
  if (num_received == len)
  {
    for (uint8_t i = 0; i < len; i++)
    {
      buff[i] = Wire.read();
    }
    return 0;
  }
  else
  {
    return -1;
  }
}

void inv_icm20948_sleep_us(int us)
{
  delayMicroseconds(us);
}

int ArduinoICM20948::init(ArduinoICM20948Settings settings)
{
  ArduinoICM20948 *me = this;
  I2C_Address = settings.i2c_address;
  struct inv_icm20948_serif icm20948_serif;
  icm20948_serif.context = 0; // no need
  icm20948_serif.read_reg = [me](void *context, uint8_t reg, uint8_t *buf, uint32_t len) -> int
  { return me->idd_io_hal_read_reg(context, reg, buf, len); };
  icm20948_serif.write_reg = [me](void *context, uint8_t reg, const uint8_t *buf, uint32_t len) -> int
  { return me->idd_io_hal_write_reg(context, reg, buf, len); };
  icm20948_serif.max_read = 1024 * 16;  // maximum number of bytes allowed per serial read
  icm20948_serif.max_write = 1024 * 16; // maximum number of bytes allowed per serial write

  // Reset icm20948 driver states
  icm20948.inv_icm20948_reset_states(&icm_device, &icm20948_serif);
  icm20948.inv_icm20948_register_aux_compass(&icm_device, icm20948.inv_icm20948_compass_id::INV_ICM20948_COMPASS_ID_AK09916, AK0991x_DEFAULT_I2C_ADDR);

  // Setup the icm20948 device
  rc = icm20948_sensor_setup();

  if (rc != 0)
  {
    check_rc(rc, "Error sensor_setup/DMP loading.");
  }
  else
  {

    if (icm_device.selftest_done && !icm_device.offset_done)
    {
      // If we've run self test and not already set the offset.
      icm20948.inv_icm20948_set_offset(&icm_device, unscaled_bias);
      icm_device.offset_done = 1;
    }

    // Now that Icm20948 device is initialized, we can proceed with DMP image loading
    // This step is mandatory as DMP image is not stored in non volatile memory
    Serial.print(F("Enabling DMP for IMU ID : "));
    Serial.print(settings.sensorId);

    rc = load_dmp3();

    if (rc != 0)
    {
      check_rc(rc, " Error DMP loading.");
    }
    else
    {

      Serial.println(" DMP ready");

      icm20948.inv_icm20948_set_lowpower_or_highperformance(&icm_device, settings.mode);

      // Set frequency
      rc = icm20948.inv_icm20948_set_sensor_period(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_GYROSCOPE), 1000 / settings.gyroscope_frequency);
      rc = icm20948.inv_icm20948_set_sensor_period(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_ACCELEROMETER), 1000 / settings.accelerometer_frequency);
      rc = icm20948.inv_icm20948_set_sensor_period(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_MAGNETOMETER), 1000 / settings.magnetometer_frequency);
      rc = icm20948.inv_icm20948_set_sensor_period(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_GAME_ROTATION_VECTOR), 1000 / settings.quaternion6_frequency);
      rc = icm20948.inv_icm20948_set_sensor_period(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_ROTATION_VECTOR), 1000 / settings.quaternion9_frequency);
      rc = icm20948.inv_icm20948_set_sensor_period(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_GRAVITY), 1000 / settings.gravity_frequency);
      rc = icm20948.inv_icm20948_set_sensor_period(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_LINEAR_ACCELERATION), 1000 / settings.linearAcceleration_frequency);
      rc = icm20948.inv_icm20948_set_sensor_period(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_BAC), 1000 / settings.har_frequency);
      rc = icm20948.inv_icm20948_set_sensor_period(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_STEP_COUNTER), 1000 / settings.steps_frequency);
      rc = icm20948.inv_icm20948_set_sensor_period(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_STEP_DETECTOR), 1000 / settings.step_detector_frequency);

      // Enable / disable
      rc = icm20948.inv_icm20948_enable_sensor(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_GYROSCOPE), settings.enable_gyroscope);
      rc = icm20948.inv_icm20948_enable_sensor(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_ACCELEROMETER), settings.enable_accelerometer);
      rc = icm20948.inv_icm20948_enable_sensor(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_MAGNETOMETER), settings.enable_magnetometer);
      rc = icm20948.inv_icm20948_enable_sensor(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_GAME_ROTATION_VECTOR), settings.enable_quaternion6);
      rc = icm20948.inv_icm20948_enable_sensor(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_ROTATION_VECTOR), settings.enable_quaternion9);
      rc = icm20948.inv_icm20948_enable_sensor(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_GRAVITY), settings.enable_gravity);
      rc = icm20948.inv_icm20948_enable_sensor(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_LINEAR_ACCELERATION), settings.enable_linearAcceleration);
      rc = icm20948.inv_icm20948_enable_sensor(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_BAC), settings.enable_har);
      rc = icm20948.inv_icm20948_enable_sensor(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_STEP_COUNTER), settings.enable_steps);
      rc = icm20948.inv_icm20948_enable_sensor(&icm_device, idd_sensortype_conversion(INV_SENSOR_TYPE_STEP_DETECTOR), settings.enable_step_detector);

    }
  }
  return rc;
}
